fix: resolve conflict and add Collections.emptyList()